--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -23,7 +23,7 @@
             <div class="col-xl">
                 <nav class="navbar navbar-expand">
                     <div class="navbar-nav">
-                        <a class="nav-link-1" aria-current="page" href="#">Profil</a>
+                        <a class="nav-link-1" aria-current="page" href="/profile">Profil</a>
                         <a class="nav-link-1" href="/contacts">Contacts</a>
                     </div>
                 </nav>
