--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -17,7 +17,7 @@
                 <!-- Navbar Profil/Contact-->
                     <nav class="navbar navbar-expand ">
                         <div class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <a class="nav-link-1" aria-current="page" href="#">Profil</a>
+                            <a class="nav-link-1" aria-current="page" href="/profile">Profil</a>
                             <a class="nav-link-1" href="/contacts">Contacts</a>
                         </div>
                     </nav>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="col-sm">
                             <div class="text-zone">
-                                <p><b>Systeme de preferenc</b>e</p>
+                                <p><b>Systèmes de préference</b></p>
                                 <ul>
 
                                     <% preference[2].forEach((element) =>{ %>
